# AI_agent_jobsearch_project

./: .gitignore  README.md  pyproject.toml
EDA_projekt/: eda.ipynb  test_vector_gemini.ipynb  test_vector_scent.ipynb
data/: eda.ipynb  jobsearch-2026-01-25-daily-public.json
scripts/: dev_main.py  main.py
src/ai_agent_jobsearch_project/: __init__.py
src/ai_agent_jobsearch_project/backend/: api.py  schemas.py
src/ai_agent_jobsearch_project/data/: load_yrkesbarometern.py
src/ai_agent_jobsearch_project/embeddings/: document_builder.py  lance_models.py  sentence_transformer.py  vector_store.py
src/ai_agent_jobsearch_project/services/: ingestion_services.py
