[project]
name = "ai-agent-jobsearch-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "suseliwen", email = "susanne.wenblad@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "pandas>=3.0.0",
]

[project.scripts]
ai-agent-jobsearch-project = "ai_agent_jobsearch_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
