[project]
name = "ai-agent-jobsearch-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "suseliwen", email = "susanne.wenblad@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.3",
    "fastapi>=0.128.0",
    "google-genai>=1.60.0",
    "google-generativeai>=0.8.6",
    "lancedb>=0.27.0",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
ai-agent-jobsearch-project = "ai_agent_jobsearch_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
